# easy-bookkeeping-bot

./: .env.example  README.md  bot.py  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
accounting/: __init__.py  client.py  log.py
accounting/database/: __init__.py
accounting/database/base/: db.py
accounting/database/tables/: __init__.py  bill.py  group.py
accounting/methods/: __init__.py  bill_mgmt.py  command_execute.py  group_mgmt.py
accounting/tools/: __init__.py  exchange_rate.py
accounting/types/: __init__.py  command.py  operate.py
accounting/utiles/: currency_list.py  utile.py
config/: config.py
database/: __init__.py
database/tables/: __init__.py  chat_group_mapping.py
methods/: __init__.py  chat_group_mapping_mgmt.py
module/: cancel.py  command.py  utile.py
module/bill/: add.py  clearing.py  ls.py  undo.py  utile.py
module/group/: chat_mapping.py  create.py  delete.py  edit.py  utile.py
utiles/: filters.py  step_statu.py
